[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"
default-run = "helloworld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fizzbuzz_game"
path = "src/fizzbuzz_game.rs"

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "argon2"
path = "src/argon2.rs"

[dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
num = "0.4.0"
num-iter = "0.1.43"
rayon = "1"
rust-argon2 = "1"